@@ -28,12 +28,18 @@
 
 #include <string>
 
+
+void SavePlayerDefaults();
+void LoadPlayerDefaults();
+
 // Public Sub SaveNPCDefaults()
 void SaveNPCDefaults();
 
 // Public Sub LoadNPCDefaults()
 void LoadNPCDefaults();
 
+
+void FindCustomPlayers();
 // Public Sub FindCustomNPCs(Optional cFilePath As String = "")
 //void FindCustomNPCs(std::string cFilePath = "");
 void FindCustomNPCs();
